--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
 	<meta charset="UTF-8">
     <title>Rodrigo Ferreira Rodrigues</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>Rodrigo Ferreira Rodrigues</h1>
