--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-	<meta charset="UTF-8">
-    	<title>Rodrigo Ferreira Rodrigues</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <h1>Rodrigo Ferreira Rodrigues</h1>
-    <p align="left"> Under Construction</p>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Modern CV REsume">
+    <title>Resume Rodrigo Rodrigues</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="left_side">
+            <div>
+                <h1>Rodrigo Ferreira Rodrigues</h1>
+                <h2>Software Developer</h2>
+            </div>
+        </div>
+        
+        <div class="right_side">
+            <h1>Under Construction</h1>
+        </div>
+    </div>
+</body>
+
 </html>
