--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
     <div class="container">
         <div class="left_side">
-            <div>
-                <h1>Rodrigo Ferreira Rodrigues</h1>
-                <h2>Software Developer</h2>
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src="me200px.png">
+                </div>
+                <h2>Rodrigo Ferreira Rodrigues<br><span>Software Developer</span></h2>
             </div>
         </div>
-        
+
         <div class="right_side">
             <h1>Under Construction</h1>
         </div>
