--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Modern CV REsume">
     <title>Resume Rodrigo Rodrigues</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -18,6 +21,68 @@
                 </div>
                 <h2>Rodrigo Ferreira Rodrigues<br><span>Software Developer</span></h2>
             </div>
+
+            <div class="contactInfo">
+                <h3 class="title">Contact Info</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-phone"></i></span>
+                        <span class="text">+351 913 889 207</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-envelope-open"></i></span>
+                        <span class="text">rfrodrigues@outlook.com.br</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-earth-europe"></i></span>
+                        <span class="text">https://rfrodriguespe.github.io/</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
+                        <span class="text">https://www.linkedin.com/in/rfrodriguespe/</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
+                        <span class="text">Vila Nova de Gaia, Porto, Portugal</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contactInfo education">
+                <h3 class="title">Education</h3>
+                <ul>
+                    <li>
+                        <h5>2018 - 2020</h5>
+                        <h4>BTech. Analysis and systems development</h4>
+                        <h4>Faculdade Nova Roma</h4>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contactInfo languages">
+                <h3 class="title">languages</h3>
+                <ul>
+                    <li>
+                        <span class="text">English</span>
+                        <span class="percent">
+                            <div style="width: 60%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">Italian</span>
+                        <span class="percent">
+                            <div style="width: 20%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">Portuguese</span>
+                        <span class="percent">
+                            <div style="width: 100%;"></div>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+
         </div>
 
         <div class="right_side">
