--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Modern CV REsume">
+    <meta name="description" content="Modern CV Resume">
     <title>Resume Rodrigo Rodrigues</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" media="print" href="print.css" />
+
 </head>
 
 <body>
@@ -26,23 +28,23 @@
                 <h3 class="title">Contact Info</h3>
                 <ul>
                     <li>
-                        <span class="icon"><i class="fa-solid fa-phone"></i></span>
+                        <span class="icon"><i class="fa fa-solid fa-phone" aria-hidden="true"></i></span>
                         <span class="text">+351 913 889 207</span>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa-solid fa-envelope-open"></i></span>
+                        <span class="icon"><i class="fa fa-solid fa-envelope-open" aria-hidden="true"></i></span>
                         <span class="text">rfrodrigues@outlook.com.br</span>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa-solid fa-earth-europe"></i></span>
-                        <span class="text">https://rfrodriguespe.github.io/</span>
+                        <span class="icon"><i class="fa fa-brands fa-github" aria-hidden="true"></i></span>
+                        <span class="text">github.com/rfrodriguespe</span>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
-                        <span class="text">https://www.linkedin.com/in/rfrodriguespe/</span>
+                        <span class="icon"><i class="fa fa-brands fa-linkedin" aria-hidden="true"></i></span>
+                        <span class="text">linkedin.com/in/rfrodriguespe</span>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
+                        <span class="icon"><i class="fa fa-solid fa-location-dot" aria-hidden="true"></i></span>
                         <span class="text">Vila Nova de Gaia, Porto, Portugal</span>
                     </li>
                 </ul>
@@ -86,7 +88,113 @@
         </div>
 
         <div class="right_side">
-            <h1>Under Construction</h1>
+            <div class="about">
+                <h2 class="title2">Profile</h2>
+                <p>Yesterday, support analyst, today, Software developer and tomorrow... Who's know? Above of all, a
+                    passionate about technology.<br>
+                    Graduated in Systems Analysis and Development, I work with Java, SQL and JS, having knowledge in
+                    technologies such as Git, Hibernate, Maven, Spring, HTML, CSS and Python.<br>
+                    I work as Software Developer for a French Company, AmeXio, located at Porto, Portugal.<br>
+                    I had benn worked as technical support for 11 years in a multinational, with full domain in Windows
+                    Systems and intermediate in Linux. Knowledge in MS Active Directory, CISCO networks, Dell and Lenovo
+                    certified for installation, configuration and maintenance on desktops and notebooks, as well as
+                    Lexmark certified for maintenance on laser printers and MFPs.</p>
+            </div>
+            <div class="about">
+                <h2 class="title2">Experience</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2022 - Present</h5>
+                        <h5>AmeXio</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Junior Sofwatre Developer</h4>
+                        <p>Working for Natixis, at retail department on a project of Life Insurance based on IBM FileNet
+                            and custom development in java, js and sql.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2019 - 2021</h5>
+                        <h5>Freelancer</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Support Analist</h4>
+                        <p>Acting on two company projects for the client Ambev (AB InBev), working on the installation
+                            of security patches and AV on servers (Windows 2008 and 2008 R2 server) and workstations and
+                            on a survey of the entire network structure of the factory.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2008 - 2019</h5>
+                        <h5>PROXXI. an IBM® Company. </h5>
+                    </div>
+                    <div class="text">
+                        <h4>Senior Support Analist</h4>
+                        <p>Implementation and maintenance of systems, creation of bat's and scripts for automation of
+                            backup and migration processes using Shell Script. Queries in SQL Server environments.
+                            On-site technical support to users, preventive and corrective maintenance on ICT equipment,
+                            such as: Servers (Windows 2003, 2008 and 2008 R2), PC's, notebooks, UPS systems, CISCO
+                            networks, sucha as Cisco IOS Routers 1900 series and 200 series, Catalyst switches series
+                            (ccna skill compatible), printers and MPF's Lexmark and Ricoh Laser and POS.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="about skills">
+                <h2 class="title2">Professional Skills</h2>
+                <div class="box">
+                    <h4>Html</h4>
+                    <div class="percent">
+                        <div style="width: 15%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>CSS</h4>
+                    <div class="percent">
+                        <div style="width: 30%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Javascript</h4>
+                    <div class="percent">
+                        <div style="width: 10%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Java</h4>
+                    <div class="percent">
+                        <div style="width: 65%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>SQL</h4>
+                    <div class="percent">
+                        <div style="width: 40%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>IBM Filenet</h4>
+                    <div class="percent">
+                        <div style="width: 50%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Python</h4>
+                    <div class="percent">
+                        <div style="width: 20%;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="about interest">
+                <h2 class="title2">Interest</h2>
+                <ul>
+                    <li><i class="fa fa-solid fa-gamepad" aria-hidden="true"></i> Gaming</li>
+                    <li><i class="fa fa-brands fa-raspberry-pi" aria-hidden="true"></i> IoT</li>
+                    <li><i class="fa fa-solid fa-person-walking-luggage" aria-hidden="true"></i> Travel</li>
+                    <li><i class="fa fa-solid fa-motorcycle" aria-hidden="true"></i> Motorcycle</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
