--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
                     </div>
                 </div>
             </div>
+            <div class="about courses">
+                <h2 class="title2">Courses and Certifications</h2>
+                <ul>
+                    <li>NDG Linux Unhatched – Cisco Networking Academy</li>
+                    <li>Scrum Foundation Professional Certificate (SFPC) – CertiProf.</li>
+                    <li>Cyber Security Foundation Professional Certificate - CSFPC™ - CertiProf.</li>
+                    <li>Introduction to Git e GitHub - Digital Innovation One Inc</li>
+                    <li>Agile Projects with Scrum - Digital Innovation One Inc</li>
+                    <li>Linux: Operation System Introduction - Digital Innovation One Inc</li>
+                    <li>Shell Script – File manipulation - Digital Innovation One Inc</li>
+                    <li>Basic Development with Java - Digital Innovation One Inc</li>
+                    <li>Implementing Collections and Streams with Java - Digital Innovation One Inc</li>
+                    <li>Dell DSCE – Certified for desktops and laptops</li>
+                    <li>Lenovo Service Training – Certified for desktops and laptops</li>
+                    <li>Lexmark International – Certified for Laser Mono and Color printers and MPFs.</li>
+
+                </ul>
+            </div>
             <div class="about interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
