--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <script src="script.js"></script>
     <div class="container">
         <div class="left_side">
             <div class="profileText">
