--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="startScreen">
-        <label for="playerName">Insira seu nome:</label>
-        <input type="text" id="playerName" placeholder="Seu nome">
-        <button id="startButton">Iniciar Jogo</button>
-    </div>
-    <div id="gameArea" style="display:none;">
+    <div id="gameArea">
         <img id="marcilio" src="marcilio.png" alt="Marcilio">
         <div id="score">Score: 0</div>
         <div id="lives">Lives: 3</div>
@@ -28,3 +23,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
