--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="gameArea">
         <img id="marcilio" src="marcilio.png" alt="Marcilio">
         <div id="score">Score: 0</div>
+        <div id="level">Level: 1</div>
         <div id="lives">Lives: 3</div>
     </div>
     <script src="script.js"></script>
